# rust-server

./: Cargo.toml  Dockerfile
my-wasm/: Cargo.toml
my-wasm/src/: lib.rs
src/: main.rs  server.rs
static/: index.html
